# MAPSI

./: ReadMe.md
AttributeCombination/: make_all.sh  receiver.sh  receiver_decrypt.cc  receiver_transform.cc  sender.sh  sender_transform.cc
InvertedIndex/: CMakeLists.txt  run_receiver.sh  run_sender.sh
InvertedIndex/APSIPeripheral/: receiver_decrypt.cc  receiver_transform.cc  sender_transform.cc
InvertedIndex/src/: client.cc  client.h  common.cc  common.h  main.cc  server.cc  server.h
